Fix Albums compact layout not scaling well in single-column mode
When the window is so narrow that only one column of albums fit, the
only column is supposed to scale to fill the whole window. This,
however, didn't work when the Albums view was using the compact layout.
Instead, the column was still enforced to the same width as when
multiple columns are shown.

This was especially prominent on landscape mobile screen where album
names got unnecessarily truncated and long track names got split to
multiple rows. At the same time, there was lot of empty screen space
on the right side of the albums.

--- a/css/style-albums.css
+++ b/css/style-albums.css
@@ -131,15 +131,16 @@
 
 
 /* Albums and Podcasts view single column layout when there's no room for two columns or more */
-.single-col .album-area {
+.view-container.single-col .album-area,
+.view-container.single-col.compact .album-area {
 	width: 100%;
 }
 
-.single-col .album-area > h2 {
+.view-container.single-col .album-area > h2 {
 	max-width: 80vw;
 }
 
-.single-col .album-area .track-list li > div > span {
+.view-container.single-col .album-area .track-list li > div > span {
 	white-space: normal;
 	vertical-align: top;
 	max-width: unset;
