--- a/css/style-tracklist.css
+++ b/css/style-tracklist.css
@@ -78,7 +78,7 @@
 	margin-left: 30px;
 }
 
-#albums.compact .album-area .track-list li > div > span {
+#albums.compact:not(.single-col) .album-area .track-list li > div > span {
 	max-width: 272px;
 }
 
